# schwab-core

./: .gitignore  CLAUDE.md  GREEKS_MODULE_SUMMARY.md  STRATEGY_DETECTION_SUMMARY.md  __init__.py  demo_greeks.py  pyproject.toml  setup.py
broker/: __init__.py  base.py  registry.py  schwab.py
calculations/: API_REFERENCE.md  greeks.py  pnl.py
examples/: strategy_detection_example.py
position/: __init__.py  classifier.py
schwab_core/: __init__.py
schwab_core/broker/: __init__.py  base.py  registry.py  schwab.py  tradier.py
schwab_core/calculations/: EXTRACTION_SUMMARY.md  PNL_VERIFICATION.md  __init__.py
schwab_core/strategy/: __init__.py  detector.py  iron_butterfly.py  vertical_spread.py
schwab_core/symbol/: __init__.py  parser.py
schwab_core/transformers/: EXTRACTION_SUMMARY.md  option_chain.py  positions.py  utils.py
schwab_core/utils/: constants.py
strategy/: grouper.py
symbol/: __init__.py
tests/: conftest.py  test_contract_parity.py  test_detector.py  test_greeks.py  test_greeks_standalone.py  test_grouper.py  test_iron_butterfly.py  test_pnl_calculator.py  test_symbol_parser.py  test_transformers_accounts.py  test_transformers_option_chain.py  test_transformers_positions.py  test_transformers_utils.py  test_vertical_spread.py
tests/broker/: conftest.py  test_registry.py  test_schwab_adapter.py  test_tradier_adapter.py
tests/contracts/: CONTRACT_TEST_REPORT.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  TEST_REPORT.md  __init__.py  test_pnl_parity.py  (+3 more)
transformers/: README.md  __init__.py  accounts.py  examples.py
utils/: __init__.py
